--- a/package.json
+++ b/package.json
@@ -9,19 +9,19 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "next": "15.0.0",
     "react": "^18",
-    "react-dom": "^18",
-    "next": "15.0.0"
+    "react-dom": "^18"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
     "eslint": "^9",
     "eslint-config-next": "15.0.0",
+    "typescript": "^5",
+    "postcss": "^8",
+    "tailwindcss": "^3.4.1",
     "@eslint/eslintrc": "^3"
   }
 }
