--- a/package.json
+++ b/package.json
@@ -19,9 +19,6 @@
     "@types/react-dom": "^18",
     "eslint": "^9",
     "eslint-config-next": "15.0.0",
-    "typescript": "^5",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
-    "@eslint/eslintrc": "^3"
+    "typescript": "^5"
   }
 }
